--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ws-example",
+  "name": "my-app",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,10 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.2.4",
-    "@nestjs/websockets": "^10.2.4",
+    "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/websockets": "^10.2.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
